--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,28 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
+
+#EndPoint y ApiKey
+#GraphQL endpoint: https://j6spc7q6kvagjgzzgofnfvfz3u.appsync-api.us-east-1.amazonaws.com/graphql
+#GraphQL API KEY: da2-xrgohbpatvhkbgvpt3nzkmccg4
